--- a/Ejercicios/TODO/css/style.css
+++ b/Ejercicios/TODO/css/style.css
@@ -56,7 +56,7 @@ main .tareas article>a{
     position: absolute;
     top: 0;
     right: 0;
-    transition: 1s;
+    transition: .5s;
 }
 
 main .tareas article>a:hover{
