--- a/jquery/galeria_responsive/css/style.css
+++ b/jquery/galeria_responsive/css/style.css
@@ -5,22 +5,35 @@
     box-sizing: border-box;
 }
 
-.container h1,
-.container h2,
-.container p{
-    color: white;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
 
 header{
     background-color: black;
-    height: 200px;
     width: 100%;
+    color: white;
+    text-align: center;
+    padding: 2% 0% 10% 0%;
+}
+
+header h1{
+    font-size: 180%;
+    font-family: 'Libre Baskerville', serif;
+    margin: 10px 0;
+
+}
+
+header h2{
+    font-size: 150%;
+    font-family: 'Libre Baskerville', serif;
 }
 
 footer{
     background-color: black;
-    height: 50px;
     width: 100%;
+    padding: 10px;
+    color: white;
 }
 
 .container{
@@ -38,30 +51,117 @@ img{
     width: 100%;
     height: auto;
     display: block;
+    transition: 1s;
 }
 
 .trabajo{
     width: 50%;
     position: relative;
+    overflow: hidden;
 }
 
-.info{
+#trabajos .trabajo .info{
     position: absolute;
     top: 0%;
-    left:0%;
+    left: 0%;
     color: white;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0);
     text-align: center;
     padding-top: 30%;
-    font-family: 'Libre Baskerville' , serif;
+    font-family: 'Montserrat' , sans-serif;
+    font-weight: bold;
+    transition: 1s;
+    cursor: pointer;
+}
+
+#trabajos .trabajo:hover .info{
+    top: 0%;
+    left: 0%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#trabajos .trabajo .imagen{
+    transition: 1s;
+}
+
+#trabajos .trabajo:hover .imagen{
+    transform: rotate(15deg) scale(1.4);
+}
+
+.trabajo .info h3{
+    margin-top:10px;
+    position: relative;
+    left: -500px;
+    transition: 1s;
+    font-size: 1.4em;  
+}
+
+.trabajo .info h4{
+    margin-top:10px;
+    position: relative;
+    left: 500px;
+    transition: 1s; 
+    font-size: 1.2em;  
+}
+
+.trabajo:hover .info h3,.trabajo:hover .info h4{    
+    left: 0px;   
+}
+
+.info h3,.info h4{
+    position: relative;
+    left: -500px;
+    top:0;
 }
 
 #trabajos .trabajo h3,
 #trabajos .trabajo h4{
     margin-bottom: 10px;
 }
+
+.modal{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0;
+    display: none;
+}
+
+.modal .manto{
+    background-color: #000000aa;
+    width: 100%;
+    height: 100vh;
+}
+
+.modal .contenedor{
+    position: relative;
+    top: 1%;
+    width: 60%;
+    left: 20%;
+    background-color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+.modal .contenedor h4{
+    padding-top: 10px;
+}
+.modal .contenedor h3{
+    padding-bottom: 10px;
+}
+
+.modal .cerrar{
+    width: 24px;
+    height: auto;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    filter: invert(100%);
+}
+
 
 @media(max-width: 26.625em){
     #trabajos .trabajo{
