--- a/jquery/galeria_responsive/css/style.css
+++ b/jquery/galeria_responsive/css/style.css
@@ -134,6 +134,7 @@ img{
     background-color: #000000aa;
     width: 100%;
     height: 100vh;
+    position: absolute;
 }
 
 .modal .contenedor{
@@ -160,6 +161,7 @@ img{
     top: 15px;
     right: 15px;
     filter: invert(100%);
+    cursor: pointer;
 }
 
 
